# sjaak

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: mybench.rs
src/: bitboard.rs  bitboard_iter.rs  castling_rights.rs  coord.rs  game.rs  lib.rs  moves.rs  perft.rs  piece.rs  position.rs  powerset.rs  print_board.rs  side.rs  zobrist_table.rs
src/perft/: all.rs  mod.rs  node.rs  pawn.rs
src/pieces/: bishop.rs  king.rs  knight.rs  magic_value.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/pieces/bishop/: magic.rs  mod.rs  reference.rs
src/pieces/rook/: magic.rs  mod.rs  reference.rs
src/sliding_pieces/: bishop.rs  magic_value.rs  mod.rs  rook.rs  rook_magic.rs
