[package]
name = "shah"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.6.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[dependencies]
num_cpus = "1.17.0"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"

[[bench]]
name = "mybench"
harness = false

[profile.release]
lto = true
