[package]
name = "sjaak"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.6.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[dependencies]
num_cpus = "1.17.0"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"

[features]
default = []
magic_bitboards = []

[[bin]]
name = "find_rook_magic"
required-features = ["magic_bitboards"]

[[bin]]
name = "find_bishop_magic"
required-features = ["magic_bitboards"]

[[bench]]
name = "mybench"
harness = false
required-features = ["magic_bitboards"]

[profile.release]
lto = true
